# gdiff

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gdiff/: __init__.py  __main__.py  cli.py  highlight.py  html_gen.py  parser.py
