[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdiff"
version = "0.2.0"
description = "Web-based side-by-side git diff viewer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Younes Boukdir" },
]
keywords = ["git", "diff", "viewer", "side-by-side", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: General",
]

[project.optional-dependencies]
highlight = ["pygments>=2.10"]

[project.scripts]
gdiff = "gdiff.cli:main"

[project.urls]
Homepage = "https://github.com/younes20031937/gdiff"
Source = "https://github.com/younes20031937/gdiff"
Issues = "https://github.com/younes20031937/gdiff/issues"
